# atom-locomotion-deploy

./: CHANGELOG.md  CMakeLists.txt  LICENSE.txt  README.md  README.zh.md
include/: atom_deploy.hpp
include/loop/: loop.hpp
include/robot_fsm/: fsm.hpp
include/robot_model/: atom.hpp
include/utils/: utils.hpp
policy/: config.yaml
policy/model/: atom.onnx
src/: atom_deploy.cpp
